# gauntlet

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  default.nix  example.schema.json  example_manifest.toml  flake.nix  package-lock.json  package.json  rustfmt.toml
.cargo/: config.toml
.idea-run/: build-binary.run.xml  build-core.run.xml  build-dev-plugin.run.xml  build-react.run.xml  build-renderer.run.xml  build-server-all.run.xml  build-tools.run.xml  generate-api.run.xml  just-run-client.run.xml  just-run-management.run.xml  just-run-server.run.xml
assets/: Info.plist
bundled_themes/: legacy.toml  macos_dark.toml  macos_light.toml
dev_data/: .gitignore
dev_plugin/: gauntlet.toml  package-lock.json  package.json
docs/: THEME.md  architecture-blocks.plantuml  architecture.plantuml
example_plugins/: .gitignore
js/: entry_point.js  package-lock.json  package.json
nix/: README.md  (+3 more)
rust/cli/: Cargo.toml  build.rs
rust/cli/src/: lib.rs
rust/client/: Cargo.toml  build.rs
rust/client/src/: dbus.rs  global_shortcut.rs  lib.rs  main.rs  model.rs  rpc.rs
rust/client/src/ui/: client_context.rs  grid_navigation.rs  inline_view_container.rs  mod.rs  physical_keys.rs  plugin_container.rs  scenario_runner.rs  scroll_handle.rs  search_list.rs  server.rs  sys_tray.rs  themable_widget.rs  theme.rs  view_container.rs  wayland.rs  widget.rs  widget_container.rs
rust/client/src/ui/custom_widgets/: loading_bar.rs  mod.rs
rust/client/src/ui/hud/: mod.rs
rust/client/src/ui/platform/: linux.rs
rust/client/src/ui/settings/: mod.rs  theme.rs  ui.rs
rust/client/src/ui/settings/components/: shortcut_selector.rs  spinner.rs
rust/client/src/ui/settings/theme/: button.rs  checkbox.rs  container.rs  pick_list.rs  rule.rs  scrollable.rs  shortcut_selector.rs  text.rs  text_input.rs
rust/client/src/ui/settings/views/: general.rs  mod.rs  plugins.rs
rust/client/src/ui/settings/views/plugins/: preferences.rs  table.rs
rust/client/src/ui/state/: main_view.rs  mod.rs  plugin_view.rs
rust/client/src/ui/theme/: button.rs  checkbox.rs  container.rs  date_picker.rs  grid.rs  image.rs  loading_bar.rs  mod.rs  pick_list.rs  row.rs  rule.rs  scrollable.rs  space.rs  svg.rs  text.rs  text_input.rs  tooltip.rs
rust/client/src/ui/widget/: accessories.rs  action_panel.rs  content.rs  data.rs  data_mut.rs  detail.rs  empty_view.rs  events.rs  form.rs  grid.rs  images.rs  inline.rs  list.rs  metadata.rs  mod.rs  root.rs  search_bar.rs  state.rs  text.rs
rust/client/src/ui/window_tracking/macos/: apps.rs  mod.rs  sys.rs  window.rs
rust/client/src/ui/windows/: hud.rs  mod.rs  x11_focus.rs
rust/common/: Cargo.toml  build.rs
rust/common/src/: cli.rs  dbus.rs  detached_process.rs  dirs.rs  lib.rs  model.rs  rpc.rs  scenario_convert.rs  scenario_model.rs
rust/common/src/rpc/: backend_api.rs  backend_server.rs  convert.rs  frontend_api.rs  frontend_server.rs  grpc.rs  grpc_convert.rs  mod.rs  server_grpc_api.rs
rust/common_plugin_runtime/: Cargo.toml
rust/common_plugin_runtime/src/: api.rs  backend_for_plugin_runtime_api.rs  lib.rs  model.rs
rust/common_ui/: Cargo.toml
rust/common_ui/src/: lib.rs
rust/management_client/: Cargo.toml
rust/management_client/src/: dbus.rs  lib.rs  main.rs  theme.rs  ui.rs
rust/management_client/src/components/: mod.rs  shortcut_selector.rs
rust/management_client/src/theme/: button.rs  checkbox.rs  container.rs  number_input.rs  pick_list.rs  rule.rs  scrollable.rs  shortcut_selector.rs  spinner.rs  table.rs  text.rs  text_input.rs
rust/management_client/src/views/: general.rs  mod.rs  plugins.rs
rust/management_client/src/views/plugins/: preferences.rs  table.rs
rust/plugin_runtime/: Cargo.toml
rust/plugin_runtime/src/: api.rs  assets.rs  clipboard.rs  command_generators.rs  component_model.rs  deno.rs  entrypoint_generators.rs  environment.rs  events.rs  lib.rs  logs.rs  model.rs  model_deserialization.rs  permissions.rs  plugin_data.rs  preferences.rs  search.rs  ui.rs
rust/plugin_runtime/src/plugins/: applications.rs  numbat.rs  settings.rs
rust/plugin_runtime/src/plugins/applications/: linux.rs  macos.rs  windows.rs  x11.rs
rust/plugin_runtime/src/plugins/applications/linux/: mod.rs  x11.rs
rust/plugin_runtime/src/plugins/applications/linux/wayland/: cosmic.rs  mod.rs  wlr.rs
rust/scenario_runner/: Cargo.toml
rust/scenario_runner/src/: backend_mock.rs  frontend_mock.rs  lib.rs  main.rs  model.rs
rust/server/: Cargo.toml  build.rs
rust/server/db_migrations/: 10_frecency_fix_primary_keys.sql  11_settings_data.sql  1_initial.sql  2_pending_plugin.sql  2_preferences.sql  3_plugin_description.sql  6_plugin_type.sql  7_plugin_entrypoint_icon.sql  8_uuids.sql  9_frecency.sql
rust/server/src/: dbus.rs  dirs.rs  lib.rs  main.rs  model.rs  rpc.rs  schema.json  schema_generator.rs  search.rs
rust/server/src/manifest_models/: models.rs
rust/server/src/plugins/: applications.rs  binary_data_gatherer.rs  clipboard.rs  config_reader.rs  data_db_repository.rs  download_status.rs  frecency.rs  global_shortcut.rs  icon_cache.rs  image_gatherer.rs  js.rs  loader.rs  mod.rs  plugin_manifest.rs  run_status.rs  settings.rs  theme.rs
rust/server/src/plugins/applications/: linux.rs  macos.rs  mod.rs  other.rs  windows.rs
rust/server/src/plugins/data_db_repository/: migrations.rs
rust/server/src/plugins/data_db_repository/migrations/: 12_settings_theme.sql  13_remove_old_global_shortcut.sql  14_migrate_to_rusqlite_migration.sql  1_initial.sql  4_plugin_asset_data.sql  5_plugin_action_shortcuts.sql
rust/server/src/plugins/js/: assets.rs  clipboard.rs  command_generators.rs  component_model.rs  environment.rs  logs.rs  mod.rs  permissions.rs  preferences.rs  search.rs  ui.rs
rust/server/src/plugins/js/plugins/: applications.rs  mod.rs  numbat.rs  settings.rs
rust/server/src/plugins/js/plugins/applications/: linux.rs  macos.rs
rust/server/src/plugins/plugin_manifest_models/: models.rs
rust/server/src/plugins/settings/: config.rs  config_reader.rs  global_shortcut.rs  mod.rs
(+542 files in other folders)
