[package]
name = "cli"
edition = "2021"

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
management_client = { path = "../management_client" }
client = { path = "../client" }
server = { path = "../server" }
anyhow = { version = "1", features = ["backtrace"] }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
auto-launch = "0.5.0"

[features]
release = ["server/release"]
scenario_runner = ["server/scenario_runner", "client/scenario_runner"]
