[package]
name = "gauntlet-cli"
edition.workspace = true

[dependencies]
# workspaces
gauntlet-management-client.workspace = true
gauntlet-client.workspace = true
gauntlet-server.workspace = true

# shared
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

# other
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
auto-launch = "0.5.0"

[features]
release = ["gauntlet-server/release"]
scenario_runner = ["gauntlet-server/scenario_runner", "gauntlet-client/scenario_runner"]
