[package]
name = "gauntlet-client"
edition.workspace = true

[dependencies]
# workspaces
gauntlet-common.workspace = true
gauntlet-common-ui.workspace = true
gauntlet-utils.workspace = true
gauntlet-component-model.workspace = true
gauntlet-server.workspace = true

# shared
tokio.workspace = true
anyhow.workspace = true
iced.workspace = true
iced_fonts.workspace = true
tracing.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
image.workspace = true
once_cell.workspace = true
futures.workspace = true

# other
arc-swap = "1.7.1"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tray-icon = { version = "0.19.2", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb-async.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.2.2", features = ["NSWorkspace"] }

[build-dependencies]
gauntlet-component-model.workspace = true
anyhow.workspace = true
convert_case = "0.6.0"

[features]
scenario_runner = ["gauntlet-server/scenario_runner"]
