[package]
name = "common"
edition = "2021"

[dependencies]
gix-url = { version = "0.22.0" }
anyhow = { version = "1", features = ["backtrace"] }
tonic = "0.11.0"
prost = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-value = "0.7.0"
tokio = "1.37.0"
base64 = "0.22"
utils = { path = "../utils" }
bytes = "1.6.0"
thiserror = "1"
directories = "5.0"

[build-dependencies]
tonic-build = "0.11.0"
component_model = { path = "../component_model" }
convert_case = "0.6.0"
itertools = "0.10.5"
indexmap = "2.1.0"

[features]
release = []
scenario_runner = []
