[package]
name = "gauntlet-common"
edition.workspace = true

[dependencies]
# worspaces
gauntlet-utils.workspace = true

# shared
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
bincode.workspace = true
tonic.workspace = true
prost.workspace = true
bytes.workspace = true

# other
gix-url = { version = "0.28.1" }
base64 = "0.22"
directories = "5.0"

[build-dependencies]
# workspaces
gauntlet-component-model.workspace = true

# shared
itertools.workspace = true
indexmap.workspace = true
tonic-build.workspace = true

# other
convert_case = "0.6.0"

[features]
release = []
scenario_runner = []
