[package]
name = "management_client"
edition = "2021"

[dependencies]
tokio = "1.28.1"
clap = { version = "4.3.22", features = ["derive"] }
anyhow = { version = "1", features = ["backtrace"] }
thiserror = "1.0.48"
iced.workspace = true
iced_aw.workspace = true
iced_table.workspace = true
tracing = "0.1"
tracing-subscriber = "0.3"
common = { path = "../common" }
common-ui = { path = "../common_ui" }
tonic = "0.11.0"