[package]
name = "gauntlet-management-client"
edition.workspace = true

[dependencies]
# workspaces
gauntlet-common.workspace = true
gauntlet-common-ui.workspace = true
gauntlet-utils.workspace = true

# shared
anyhow.workspace = true
iced.workspace = true
iced_aw.workspace = true
iced_table.workspace = true
iced_fonts.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
itertools.workspace = true
