[package]
name = "scenario_runner"
edition = "2021"

[dependencies]
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "macros"] }
tonic = "0.11.0"
common = { path = "../common" }
utils = { path = "../utils" }
anyhow = { version = "1", features = ["backtrace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

