[package]
name = "server"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

tokio = "1.28.1"
tokio-util = "0.7.11"
toml = "0.8.10"
tantivy = "0.22.0"
regex = "1.9.3"
once_cell = "1.18.0"
git2 = { version = "0.19.0", features = ["vendored-libgit2", "vendored-openssl"] }
tempfile = "3"
async-stream = "0.3.5"
anyhow = { version = "1", features = ["backtrace"] }
thiserror = "1.0.48"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "json", "sqlite" ] }
common = { path = "../common" }
utils = { path = "../utils" }
indexmap = { version = "2.1.0", features = ["serde"] }
tonic = "0.11.0"
client = { path = "../client" }
walkdir = "2.4.0"
include_dir = "0.7.3"
open = "5"
uuid = "1.8"
arboard = { version = "=3.2.1", features = ["wayland-data-control"] } # TODO update when dependency hell is solved
bytes = "1.6.0"
typed-path = "0.9"
plugin_runtime = { path = "../plugin_runtime" }
futures = "0.3.31"
url = "2.5.4"
image = "0.25"
interprocess = { version = "2.2.2", features = ["tokio"] }
ureq = "2.10.0"

scenario_runner = { path = "../scenario_runner", optional = true }
itertools = "0.10.5"
vergen-pretty = "0.3.5"

[features]
release = ["common/release"]
scenario_runner = ["dep:scenario_runner", "common/scenario_runner", "plugin_runtime/scenario_runner"]

[build-dependencies]
vergen-gitcl = { version = "1.0.1", features = ["build", "cargo"] }
