[package]
name = "gauntlet-server"
edition.workspace = true

[dependencies]
# workspaces
gauntlet-common.workspace = true
gauntlet-utils.workspace = true
gauntlet-client.workspace = true
gauntlet-plugin-runtime.workspace = true
gauntlet-scenario-runner = { workspace = true, optional = true }

# shared
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
itertools.workspace = true
regex.workspace = true
futures.workspace = true
image.workspace = true
once_cell.workspace = true
tonic.workspace = true
bytes.workspace = true
walkdir.workspace = true
typed-path.workspace = true
interprocess.workspace = true
toml.workspace = true

# other
tantivy = "0.22"
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
tempfile = "3"
sqlx = { version = "0.8", features = [ "runtime-tokio", "json", "sqlite" ] }
include_dir = "0.7"
open = "5"
uuid = "1.8"
arboard = { version = "3.4", features = ["wayland-data-control"] }
url = "2.5"
ureq = "2.10"
vergen-pretty = "0.3"
dark-light = "1.1.1"

[features]
release = ["gauntlet-common/release"]
scenario_runner = ["dep:gauntlet-scenario-runner", "gauntlet-common/scenario_runner", "gauntlet-plugin-runtime/scenario_runner"]

[build-dependencies]
vergen-gitcl = { version = "1.0", features = ["build", "cargo"] }
