[package]
name = "gauntlet-server"
edition.workspace = true

[dependencies]
# workspaces
gauntlet-common.workspace = true
gauntlet-utils.workspace = true
gauntlet-utils-macros.workspace = true
gauntlet-common-plugin-runtime.workspace = true
gauntlet-plugin-runtime.workspace = true

# shared
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
itertools.workspace = true
regex.workspace = true
futures.workspace = true
image.workspace = true
once_cell.workspace = true
tonic.workspace = true
bytes.workspace = true
walkdir.workspace = true
typed-path.workspace = true
interprocess.workspace = true
toml.workspace = true

# other
global-hotkey = "0.7.0"
tantivy = "0.22"
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
tempfile = "3"
rusqlite = { version = "0.34.0", features = ["serde_json", "bundled"] }
rusqlite_migration = "2.0.0"
include_dir = "0.7"
open = "5"
uuid = "1.8"
arboard = { version = "3.4", features = ["wayland-data-control"] }
url = "2.5"
ureq = "2.10"
dark-light = "1.1.1"
schemars = "0.8"

[features]
release = ["gauntlet-common/release", "gauntlet-plugin-runtime/release"]
scenario_runner = ["gauntlet-common/scenario_runner", "gauntlet-plugin-runtime/scenario_runner"]

